# havoc-ochi

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  configure  configure.ac  licence-head.txt  licence-inprint.sh
debian/: README  README.Debian  README.source  changelog  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  ochi.default.ex  ochi.doc-base.EX  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
etc/: Makefile.am  Makefile.in  ochi.conf
po/: Makevars  POTFILES.in  havoc.pot  sl.po
share/: Makefile.am  Makefile.in  network.net  theta1  theta2
src/: Makefile.am  Makefile.in  ans_process.c  ans_process.h  bar_process.c  bar_process.h  daemon.c  daemon.h  database.c  database.h  filesystem.c  filesystem.h  imageio.c  imageio.h  img_process.c  img_process.h  localization.c  localization.h  main.c  nnrok.c  nnrok.h  sid_process.c  sid_process.h
src/ocrlib/: Makefile.am  Makefile.in  README  fileio.c  interpolation.c  lwneuralnet.h  network.c  ochi_prepare_train_file.c  ocr.h  ocr_number.c  ocr_train.c  sample.c  train.c
